--- a/test-client/myTcpClient/mainwindow.ui
+++ b/test-client/myTcpClient/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>431</width>
-    <height>466</height>
+    <width>504</width>
+    <height>505</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,7 +28,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="txtData"/>
+       <widget class="QTextEdit" name="txtData"/>
       </item>
       <item>
        <widget class="QPushButton" name="pushSent">
